--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.rn'
-version = '0.0.2'
+version = ''
 
 java {
     toolchain {
@@ -53,4 +53,9 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+bootJar{
+    archiveFileName = 'rn-delivery-batch.jar'
+    archiveVersion = "0.0.1"
 }
