--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,11 +1,8 @@
-server:
-  port: 18095
-
 spring:
   batch:
     job:
       name: ${job.name:NONE} #--job.name=yogiyoJob,cpeatsJob
-      enabled: false
+      enabled: true
     jdbc:
       initialize-schema: never
 
@@ -17,11 +14,22 @@ spring:
     tomcat:
       max-active: 50
 
+  devtools:
+    livereload:
+      enabled: true
+    restart:
+      enabled: false
+    add-properties: true
+
   jpa:
     hibernate:
       ddl-auto: none
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+    properties:
+      hibernate:
+        format_sql: true
+        show_sql: true
 
   main:
     allow-bean-definition-overriding: true
