--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
     id 'org.springframework.boot' version '3.3.0'
-    id 'io.spring.dependency-management' version '1.1.5'
+    id 'io.spring.dependency-management' version '1.1.5' // 버전 관리 기능을 사용하려면 `io.spring.dependency-management` 사용
 }
 
 group = 'com.rn'
